fix btn overflow

--- a/buttons/WordArt/style.module.scss
+++ b/buttons/WordArt/style.module.scss
@@ -271,7 +271,7 @@
   }
 }
 
-.button {
-  border-radius: 0.5rem;
-  overflow: hidden;
-}
+// .button {
+//   border-radius: 0.5rem;
+//   overflow: hidden;
+// }
